# script-parser

./: .editorconfig  .env.example  .gitignore  .gitmessage  E2E-STATUS-FIXED.md  GEMINI.md  README.md  TOM-499-READY-TO-TEST.md  WARP.md  commitlint.config.js  deploy-macmini-quick.sh  deploy-macmini.sh  deploy.sh  docker-compose-simple.yml  docker-compose.macmini.yml  docker-compose.prod.yml  docker-compose.yml  nginx-simple.conf  package.json  pnpm-lock.yaml  test-tcr-push.sh
apps/coprocessor/: .env.example  API_DOCUMENTATION.md  Dockerfile  INTEGRATION_TEST_REPORT.md  README.md  REQUEST_VALIDATION_IMPROVEMENTS.md  TOM-335_INTEGRATION_SUMMARY.md  TOM-490-配置指南.md  pyproject.toml  requirements.txt  test_subtitle.py  verify_hotword_config.py
apps/coprocessor/app/: ERROR_HANDLING_GUIDE.md  __init__.py  config.py  demo_performance_monitoring.py  error_handling.py  http_client.py  logging_config.py  main.py  performance_monitoring.py  test_error_handling.py  test_error_integration.py  test_main.py  test_performance_integration.py  test_performance_monitoring.py  test_prompt_variants.py  test_request_validation.py  test_resource_cleanup.py  test_resource_cleanup_integration.py  test_service_integration.py  test_timeout_integration.py  test_timeout_performance.py
apps/coprocessor/app/assets/: tech_hotwords_final.json  tech_hotwords_final.txt  tech_hotwords_v1_1.json  tech_hotwords_v1_1.txt  tech_hotwords_v1_2.json  tech_vocab_v1.json  (+5 more)
apps/coprocessor/docs/: ERROR_CODES.md  OSS_INTEGRATION_SUMMARY.md  SERVICE_INTEGRATION_IMPROVEMENTS.md  TIMEOUT_PERFORMANCE_IMPLEMENTATION.md
(+189 files in other folders)
