[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scriptparser-coprocessor"
version = "1.0.0"
description = "ScriptParser AI Coprocessor"
requires-python = ">=3.12"

[tool.ruff]
# 启用的规则集
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]

# 忽略的规则
ignore = [
    "E501",  # 行长度限制 (由 formatter 处理)
    "B008",  # 函数调用中的默认参数
    "C901",  # 复杂度检查
]

# 文件排除
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "build",
    "dist",
]

# 行长度
line-length = 88

# Python 版本
target-version = "py312"

[tool.ruff.format]
# 使用双引号
quote-style = "double"
# 缩进样式
indent-style = "space"
# 行尾样式
line-ending = "lf"

[tool.ruff.isort]
# 导入排序
known-first-party = ["app"]
force-single-line = false